# dogGenAI

./: .gitattributes  Training_Data  demo.ipynb  dogsnotebook.ipynb  pyproject.toml
single_in_multi_out_sample/: create_data.py  run_campaign_gp.py  sampling.ipynb
single_in_multi_out_sample/tmp/: data.csv
